# rendering_3d_scene

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
rendering_3d_scene/: CMakeLists.txt  Camera.h  Constants.h  Cube.cpp  Cube.h  Light.h  LightDirectional.cpp  LightDirectional.h  LightPoint.cpp  LightPoint.h  LightSpot.cpp  LightSpot.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  fragment_gouard.txt  fragment_shader.txt  fragment_simple.txt  fragment_spider.txt  imgui.ini  main.cpp  vertex_gouraud.txt  vertex_shader.txt  vertex_simple.txt  vertex_spider.txt
